salesforce/force-app/main/default/objects/Contact/fields/Address_Location__c.field-meta.xml
<CustomField>
    <fullName>Address_Location__c</fullName>
    <label>Address / Location</label>
    <type>TextArea</type>
</CustomField>