salesforce/force-app/main/default/objects/Contact/fields/Utm_E_X_6_dgts__c.field-meta.xml
<CustomField>
    <fullName>Utm_E_X_6_dgts__c</fullName>
    <label>Utm E - X (6 dgts)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>