salesforce/force-app/main/default/objects/Contact/fields/Utm_N_Y_7_dgts__c.field-meta.xml
<CustomField>
    <fullName>Utm_N_Y_7_dgts__c</fullName>
    <label>Utm N - Y (7 dgts)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>